--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "preview": "nuxt preview"
   },
   "devDependencies": {
-    "nuxt": "3.0.0-rc.8"
+    "@nuxtjs/tailwindcss": "^5.3.2",
+    "nuxt": "3.0.0-rc.8",
+    "sass": "^1.54.5",
+    "sass-loader": "10"
   }
 }
